--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-certifi==2024.6.2
-charset-normalizer==3.3.2
-idna==3.7
-pyTelegramBotAPI==4.19.1
-python-dotenv==1.0.1
-requests==2.32.3
-telebot==0.0.5
-urllib3==2.2.1
+pyTelegramBotAPI==4.9.0
+requests==2.26.0
+lxml==4.9.1
+Pillow==9.2.0
+fake-useragent==1.1.1
+openai==0.27.0
+scikit-learn==1.2.2
+beautifulsoup4==4.11.1
